--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3673,8 +3673,7 @@
     "    \n",
     "    rosters.iloc[j] = rosterTeam\n",
     "\n",
-    "#I changed some names in the underlying dataset... should have done it automatically here but I am retarded\n",
-    "#fuck me it doesnt even work"
+    "#I changed some names in the underlying dataset... should have done it automatically here but I am dumb\n",
    ]
   },
   {
@@ -4010,21 +4009,9 @@
     "rosters1 = rosters1[rosters['sex'] == sGender]\n",
     "rosters1.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "#fucked up results (still valid but come on)\n",
-    "#results1 = results1[results1['title'] != \"Purdue Northwest Cross Country Classic\"] #FIX\n",
-    "#results1 = results1[results1['title'] != \"Behrend Invitational\"] #FIX\n",
-    "#results1 = results1[results1['title'] != \"Maryville College Invitational 2021\"] #FIX\n",
-    "#results1 = results1[results1['title'] != \"Embry-Riddle Cross Country Classic - College and Open Meet\"] #FIX\n",
-    "#results1 = results1[results1['title'] != \"NJCAA Region X Cross Country Championships\"] #FIX\n",
-    "#results1 = results1[results1['title'] != \"NJCAA Region 9 Cross Country Championship\"] #FIX\n",
-    "#results1 = results1[results1['title'] != \"Garrett College Laker Invitational\"] #FIX\n",
-    "#results1 = results1[results1['title'] != \"OUAZ Spirit XC Invitational\"] #FIX\n",
+    "#Completely missing team scores. Messed up results due to partially missing scores manually corrected\n",
     "results1 = results1[results1['title'] != \"2021 Colorado Springs XC Open\"] #no team results\n",
-    "#results1 = results1[results1['title'] != \"7th annual Rio Grande Classic\"] #missing gender, FIX\n",
-    "#results1 = results1[results1['title'] != \"NJCAA Region XI Cross Country Championships\"] #double team, merge FIX\n",
-    "#results1 = results1[results1['title'] != \"Centennial Conference Championships\"] #offset ... FIX\n",
     "results1 = results1[results1['title'] != \"Wooster Twilight 5K Challenge\"] #no team results\n",
-    "#results1 = results1[results1['title'] != \"Region XX/WPCC Championships\"] #double team, merge FIX\n",
     "\n",
     "print(\"Number of meets: \" + str(len(results1)))\n",
     "\n",
